Refactoring the companion and trigger code, adding a bunch of options