@@ -3,6 +3,8 @@ package ca.corbett.musicplayer.extensions.scenery;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 import static org.junit.jupiter.api.Assertions.*;
+
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
@@ -12,16 +14,17 @@ import java.util.Map;
 class CompanionTest {
 
     private Companion companion;
-    private Companion.CompanionTrigger trigger;
+    private CompanionTrigger trigger;
 
     @BeforeEach
     void setUp() {
-        companion = new Companion("test", "en", null, null, null);
+        CompanionTrigger trigger = new CompanionTrigger("artist", "track", null, List.of("response"));
+        companion = new Companion("test", "description", null, List.of(trigger));
     }
 
     @Test
     void testTriggerWithArtistOnly() {
-        trigger = new Companion.CompanionTrigger("The Beatles", null, null);
+        trigger = new CompanionTrigger("The Beatles", null, null, List.of("Test response"));
 
         assertTrue(trigger.hasArtistName());
         assertFalse(trigger.hasTrackTitle());
@@ -31,7 +34,7 @@ class CompanionTest {
 
     @Test
     void testTriggerWithTrackOnly() {
-        trigger = new Companion.CompanionTrigger(null, "Hey Jude", null);
+        trigger = new CompanionTrigger(null, "Hey Jude", null, List.of("Test response"));
 
         assertFalse(trigger.hasArtistName());
         assertTrue(trigger.hasTrackTitle());
@@ -42,7 +45,7 @@ class CompanionTest {
     @Test
     void testTriggerWithSceneryOnly() {
         List<String> scenery = Arrays.asList("Forest", "Mountain");
-        trigger = new Companion.CompanionTrigger(null, null, scenery);
+        trigger = new CompanionTrigger(null, null, scenery, List.of("Test response"));
 
         assertFalse(trigger.hasArtistName());
         assertFalse(trigger.hasTrackTitle());
@@ -52,7 +55,7 @@ class CompanionTest {
 
     @Test
     void testMatchesArtistOnly() {
-        trigger = new Companion.CompanionTrigger("The Beatles", null, null);
+        trigger = new CompanionTrigger("The Beatles", null, null, List.of("Test response"));
 
         assertTrue(trigger.matches("The Beatles", "Any Track", Arrays.asList("any", "scenery")));
         assertTrue(trigger.matches("the beatles", null, null)); // Case insensitive
@@ -62,7 +65,7 @@ class CompanionTest {
 
     @Test
     void testMatchesTrackOnly() {
-        trigger = new Companion.CompanionTrigger(null, "Hey Jude", null);
+        trigger = new CompanionTrigger(null, "Hey Jude", null, List.of("Test response"));
 
         assertTrue(trigger.matches("Any Artist", "Hey Jude", Arrays.asList("any", "scenery")));
         assertTrue(trigger.matches(null, "hey jude", null)); // Case insensitive
@@ -72,7 +75,7 @@ class CompanionTest {
 
     @Test
     void testMatchesSceneryOnly() {
-        trigger = new Companion.CompanionTrigger(null, null, Arrays.asList("Forest", "Mountain"));
+        trigger = new CompanionTrigger(null, null, Arrays.asList("Forest", "Mountain"), List.of("Test response"));
 
         assertTrue(trigger.matches("Any Artist", "Any Track", Arrays.asList("forest", "mountain", "lake")));
         assertTrue(trigger.matches(null, null, Arrays.asList("Forest", "Mountain"))); // Case insensitive
@@ -83,7 +86,7 @@ class CompanionTest {
 
     @Test
     void testMatchesMultipleFields() {
-        trigger = new Companion.CompanionTrigger("The Beatles", "Hey Jude", Arrays.asList("Studio"));
+        trigger = new CompanionTrigger("The Beatles", "Hey Jude", Arrays.asList("Studio"), List.of("Test response"));
 
         assertTrue(trigger.matches("The Beatles", "Hey Jude", Arrays.asList("studio", "1960s")));
         assertFalse(trigger.matches("The Beatles", "Yesterday", Arrays.asList("studio"))); // Wrong track
@@ -93,7 +96,7 @@ class CompanionTest {
 
     @Test
     void testMatchesEmptyTrigger() {
-        trigger = new Companion.CompanionTrigger(null, null, Collections.emptyList());
+        trigger = new CompanionTrigger(null, null, Collections.emptyList(), List.of("Test response"));
 
         // An empty trigger should match anything since it has no constraints
         assertTrue(trigger.matches("Any Artist", "Any Track", Arrays.asList("any", "scenery")));
@@ -103,7 +106,7 @@ class CompanionTest {
 
     @Test
     void testMatchesBlankStrings() {
-        trigger = new Companion.CompanionTrigger("", "  ", null);
+        trigger = new CompanionTrigger("", "  ", null, List.of("Test response"));
 
         // Blank strings should be treated as null
         assertFalse(trigger.hasArtistName());
@@ -113,9 +116,9 @@ class CompanionTest {
 
     @Test
     void testEqualityAndHashCode() {
-        trigger = new Companion.CompanionTrigger("Artist", "Track", Arrays.asList("Tag1", "Tag2"));
-        Companion.CompanionTrigger sameTrigger = new Companion.CompanionTrigger("Artist", "Track", Arrays.asList("Tag1", "Tag2"));
-        Companion.CompanionTrigger differentTrigger = new Companion.CompanionTrigger("Different", "Track", Arrays.asList("Tag1", "Tag2"));
+        trigger = new CompanionTrigger("Artist", "Track", Arrays.asList("Tag1", "Tag2"), List.of("Test response"));
+        CompanionTrigger sameTrigger = new CompanionTrigger("Artist", "Track", Arrays.asList("Tag1", "Tag2"), List.of("Test response"));
+        CompanionTrigger differentTrigger = new CompanionTrigger("Different", "Track", Arrays.asList("Tag1", "Tag2"), List.of("Test response"));
 
         assertEquals(trigger, sameTrigger);
         assertEquals(trigger.hashCode(), sameTrigger.hashCode());
@@ -125,7 +128,7 @@ class CompanionTest {
 
     @Test
     void testSceneryTagsConvertedToLowerCase() {
-        trigger = new Companion.CompanionTrigger(null, null, Arrays.asList("FOREST", "Mountain", "lake"));
+        trigger = new CompanionTrigger(null, null, Arrays.asList("FOREST", "Mountain", "lake"), List.of("Test response"));
 
         List<String> expectedTags = Arrays.asList("forest", "mountain", "lake");
         assertEquals(expectedTags, trigger.getSceneryTags());
@@ -133,17 +136,18 @@ class CompanionTest {
 
     @Test
     void testNullSceneryHandling() {
-        trigger = new Companion.CompanionTrigger(null, null, null);
+        trigger = new CompanionTrigger(null, null, null, null);
 
         assertFalse(trigger.hasSceneryTags());
         assertTrue(trigger.getSceneryTags().isEmpty());
+        assertTrue(trigger.getResponses().isEmpty());
     }
 
     @Test
     void testGetResponse_withNoMatchingTrigger_shouldReturnNull() {
         // GIVEN a search where nothing matches:
-        String artist = "Artist";
-        String track = "Track";
+        String artist = "Somebody";
+        String track = "Some track";
         List<String> tags = List.of("tag1", "tag2");
 
         // WHEN we ask for a response:
@@ -156,11 +160,8 @@ class CompanionTest {
     @Test
     void testGetResponse_withMatch_shouldReturnResponse() {
         // GIVEN a search where our trigger matches:
-        Companion.CompanionTrigger trigger1 = new Companion.CompanionTrigger("Artist", "Track", List.of("tag1", "tag2"));
-        List<String> responses = List.of("Response1");
-        Map<Companion.CompanionTrigger, List<String>> triggerMap = new HashMap<>();
-        triggerMap.put(trigger1, responses);
-        Companion companion1 = new Companion("Test1", "en", null, null, triggerMap);
+        CompanionTrigger trigger1 = new CompanionTrigger("Artist", "Track", List.of("tag1", "tag2"), List.of("Response1"));
+        Companion companion1 = new Companion("Test1", "desc", null, List.of(trigger1));
 
         // WHEN we ask for a response:
         String actual = companion1.getResponse("Artist", "Track", List.of("tag2", "tag1")); // order shouldn't matter
@@ -172,8 +173,8 @@ class CompanionTest {
     @Test
     void testGetAllMatchingResponses_withNoMatches_shouldReturnNothing() {
         // GIVEN a search where nothing matches:
-        String artist = "Artist";
-        String track = "Track";
+        String artist = "Somebody";
+        String track = "Some track";
         List<String> tags = List.of("tag1", "tag2");
 
         // WHEN we ask for a response:
@@ -186,17 +187,17 @@ class CompanionTest {
     @Test
     void testGetAllMatchingResponses_withMatches_shouldReturnEverything() {
         // GIVEN a search where our trigger matches:
-        Companion.CompanionTrigger trigger1 = new Companion.CompanionTrigger("Artist", "Track", List.of("tag1", "tag2"));
-        List<String> responses = List.of("Response1", "Response2", "Response3", "Response4");
-        Map<Companion.CompanionTrigger, List<String>> triggerMap = new HashMap<>();
-        triggerMap.put(trigger1, responses);
-        Companion companion1 = new Companion("Test1", "en", null, null, triggerMap);
+        CompanionTrigger trigger1 = new CompanionTrigger("Somebody", "Some track", List.of("tag1", "tag2"),
+                                                         List.of("Response1", "Response2", "Response3", "Response4"));
+        List<CompanionTrigger> triggers = new ArrayList<>();
+        triggers.add(trigger1);
+        Companion companion1 = new Companion("Test1", "desc", null, triggers);
 
         // WHEN we ask for all responses:
-        List<String> actual = companion1.getAllMatchingResponses("Artist", "Track", List.of("tag2", "tag1")); // order shouldn't matter
+        List<String> actual = companion1.getAllMatchingResponses("Somebody", "Some track", List.of("tag2", "tag1")); // order shouldn't matter
 
         // THEN we should get them all back:
         assertEquals(4, actual.size());
-        assertTrue(actual.containsAll(responses));
+        assertTrue(actual.containsAll(List.of("Response1", "Response2", "Response3", "Response4")));
     }
 }
